--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "developer-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://avturas.github.io/kubraaydin",
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "gh-pages": "^4.0.0",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^16.0.2",
@@ -27,6 +29,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
